--- a/sdtime-web/Views/Shared/_Layout.cshtml
+++ b/sdtime-web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,25 @@
                 //sd.util.logError("Test Error Message Area");
             });
         </script>
+
+        <!-- UserVoice JavaScript SDK (only needed once on a page) -->
+<script>(function () { var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true; uv.src = '//widget.uservoice.com/0AKTfmicZopnRdy0IpPoUQ.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s) })()</script>
+
+<!-- A tab to launch the Classic Widget -->
+<script>
+    UserVoice = window.UserVoice || [];
+    UserVoice.push(['showTab', 'classic_widget', {
+        mode: 'full',
+        primary_color: '#cc6d00',
+        link_color: '#666666',
+        default_mode: 'support',
+        forum_id: 218096,
+        tab_label: 'Feedback',
+        tab_color: '#cc6d00',
+        tab_position: 'bottom-left',
+        tab_inverted: false
+    }]);
+</script>
 </head>
 
 <body>
